--- a/router-tut/src/index.css
+++ b/router-tut/src/index.css
@@ -72,7 +72,7 @@ ul li {
     border-radius: 4px;
 }
 
-a:not(.back) {
+a:not(.back):not(.missingLink) {
     text-decoration: none;
     color: inherit;
 }
