--- a/router-tut/src/index.css
+++ b/router-tut/src/index.css
@@ -132,6 +132,12 @@ main > article:last-child {
     margin-top: 2rem;
 }
 
+.editBtn {
+    background: papayawhip !important;
+    color: black;
+    margin-right: 1rem;
+}
+
 article h2,
 h2 {
     font-size: 1.5rem;
