--- a/src/index.css
+++ b/src/index.css
@@ -52,7 +52,6 @@ nav {
 
 main {
     padding: 0.5rem 1rem;
-    margin-bottom: 2rem;
     flex-grow: 1;
     overflow-y: auto;
 }
@@ -202,8 +201,13 @@ textarea {
     font-size: 0.8rem;
 }
 
-.statusMsg{
+.statusMsg {
     margin-top: 2rem;
+}
+
+.footerLink {
+    color: rgb(255, 0, 0) !important;
+    font-weight: 600;
 }
 
 @media only screen and (min-width: 610px) {
